chore(kor): use the new iamge instead of yonah's image

--- a/applications/kor/kustomization/exporter-deployment.yml
+++ b/applications/kor/kustomization/exporter-deployment.yml
@@ -29,7 +29,7 @@ spec:
             - exporter
           command:
             - kor
-          image: yonahdissen/kor
+          image: ghcr.io/meysam81/kor
           livenessProbe:
             failureThreshold: 3
             httpGet:
