--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -121,6 +121,22 @@ frontend https
 
   default_backend not_found
 
+listen k8s
+  bind :8443 ssl verify required ca-file /var/lib/rancher/k3s/server/tls/ca.crt crt
+  mode tcp
+
+  stick-table type ip size 1m expire 24d store conn_rate(300s)
+  tcp-request connection track-sc0 src
+  tcp-request connection reject if { sc_conn_rate(0) gt 100 }
+
+  acl local_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
+  acl global_block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
+
+  tcp-request content reject if local_block_direct_ip or global_block_direct_ip
+
+  option tcplog
+  server k8s 127.0.0.1:6443 check inter 2000 rise 1 fall 3
+
 backend k8s
   option httpchk GET / HTTP/1.1
   http-check send hdr Host newsletter.developer-friendly.blog
