fix(haproxy): do not verify k8s ssl

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -122,7 +122,7 @@ frontend https
   default_backend not_found
 
 listen k8s
-  bind :8443 ssl verify required ca-file /var/lib/rancher/k3s/server/tls/ca.crt crt
+  bind :8443 ssl verify none
   mode tcp
 
   stick-table type ip size 1m expire 24d store conn_rate(300s)
@@ -135,7 +135,7 @@ listen k8s
   tcp-request content reject if local_block_direct_ip or global_block_direct_ip
 
   option tcplog
-  server k8s 127.0.0.1:6443 check inter 2000 rise 1 fall 3
+  server k8s 127.0.0.1:6443 check inter 3000 rise 1 fall 3
 
 backend k8s
   option httpchk GET / HTTP/1.1
