chore(haproxy): handle all k8s apiserver traffic behind LB

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -121,8 +121,8 @@ frontend https
 
   default_backend not_found
 
-listen k8s
-  bind :8443 ssl verify none
+listen apiserver
+  bind :10113
   mode tcp
 
   stick-table type ip size 1m expire 24d store conn_rate(300s)
