chore(haproxy): verify haproxy config before anything else

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -127,12 +127,12 @@ listen apiserver
 
   stick-table type ip size 1m expire 24d store conn_rate(300s)
   tcp-request connection track-sc0 src
-  tcp-request connection reject if { sc_conn_rate(0) gt 100 }
+  tcp-request connection silent-drop if { sc_conn_rate(0) gt 100 }
 
   acl local_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
   acl global_block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
 
-  tcp-request content reject if local_block_direct_ip or global_block_direct_ip
+  tcp-request content silent-drop if local_block_direct_ip or global_block_direct_ip
 
   option tcplog
   server k8s 127.0.0.1:6443 check inter 3000 rise 1 fall 3
