fix: use admin for kor clusterrole

--- a/applications/kor/kustomization/kustomization.yml
+++ b/applications/kor/kustomization/kustomization.yml
@@ -4,7 +4,7 @@ configMapGenerator:
       - configs.env
 
 resources:
-  - clusterrole.yml
+  # - clusterrole.yml
   - clusterrolebinding.yml
   - cronjob.yml
   - exporter-deployment.yml
