--- a/applications/kor/kustomization/clusterrolebinding.yml
+++ b/applications/kor/kustomization/clusterrolebinding.yml
@@ -6,7 +6,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kor
+  name: admin
 subjects:
   - kind: ServiceAccount
     name: kor
