fix(kor): address missing command issue

--- a/applications/kor/kustomization/cronjob.yml
+++ b/applications/kor/kustomization/cronjob.yml
@@ -32,7 +32,7 @@ spec:
                   set -eux
 
                   for r in $RESOURCES; do
-                    ./kor $r --delete --no-interactive $KOR_EXTRA_ARGS
+                    kor $r --delete --no-interactive $KOR_EXTRA_ARGS
                   done
               envFrom:
                 - configMapRef:
