chore(kor): remove kor download URLs

--- a/applications/kor/kustomization/cronjob.yml
+++ b/applications/kor/kustomization/cronjob.yml
@@ -38,7 +38,7 @@ spec:
                 - configMapRef:
                     name: kor
               image: ghcr.io/meysam81/kor
-              name: kor-container
+              name: kor
               resources: {}
               securityContext:
                 allowPrivilegeEscalation: false
