--- a/.github/workflows/digger-workflow.yml
+++ b/.github/workflows/digger-workflow.yml
@@ -26,12 +26,11 @@ jobs:
         uses: actions/checkout@v4
       - name: ${{ fromJSON(github.event.inputs.spec).job_id }}
         run: echo "job id ${{ fromJSON(github.event.inputs.spec).job_id }}"
-      - name: Install terragrunt
-        run: brew install terragrunt
       - uses: diggerhq/digger@vLatest
         with:
           digger-spec: ${{ inputs.spec }}
-          setup-aws: false
+          setup-terragrunt: true
+          setup-opentofu: true
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
