--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -9,10 +9,10 @@
 - name: Install node-exporter
   ansible.builtin.import_tasks: node-exporter.yml
   when: node_exporter_enabled
-- name: Install vmagent
-  ansible.builtin.import_tasks: victoria-metrics.yml
-  tags:
-    - vmagent
+# - name: Install vmagent
+#   ansible.builtin.import_tasks: victoria-metrics.yml
+#   tags:
+#     - vmagent
 - name: Install promtail
   ansible.builtin.import_tasks: promtail.yml
   tags:
