--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,73 +239,6 @@ jobs:
         name: Mark story as submitted
         run: poetry run ./main.py --submit --id "${{ steps.db.outputs.id }}"
 
-  prepare-internal-service:
-    if: |
-      ( github.event_name == 'push' && github.ref == 'refs/heads/main' ) ||
-      ( github.event_name == 'schedule' && github.event.schedule == '0 */12 * * *' )
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    outputs:
-      matrix: ${{ steps.matrix.outputs.matrix }}
-      length: ${{ steps.matrix.outputs.length }}
-    steps:
-      - uses: actions/checkout@v4
-        name: Checkout
-      - name: Install dependencies
-        run: pip install -r ./internal/ci/calculate-changed-services/requirements.txt
-      - env:
-          REDIS_HOST: ${{ secrets.REDIS_HOST }}
-          REDIS_PORT: ${{ secrets.REDIS_PORT }}
-          REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
-          REDIS_SSL: ${{ secrets.REDIS_SSL }}
-        id: matrix
-        name: Discover changed services
-        run: ./internal/ci/calculate-changed-services/main.py
-
-  build-internal-service:
-    needs: prepare-internal-service
-    if: ${{ needs.prepare-internal-service.outputs.length > 0 }}
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJson(needs.prepare-internal-service.outputs.matrix) }}
-    permissions:
-      contents: read
-      packages: write
-    uses: ./.github/workflows/build-docker.yml
-    with:
-      context: ${{ matrix.directory }}
-      image-name: ghcr.io/${{ github.repository_owner }}/${{ matrix.image-name }}
-      image-extra-tags: |
-        ghcr.io/${{ github.repository_owner }}/${{ matrix.image-name }}:${{ github.run_id }}
-        ghcr.io/${{ github.repository_owner }}/${{ matrix.image-name }}:latest
-      platforms: ${{ matrix.platforms }}
-      push: true
-      scout-cves: true
-      scout-compare: false
-    secrets:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-  finalize-internal-service:
-    needs: build-internal-service
-    if: ${{ needs.prepare-internal-service.outputs.length > 0 }}
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-        name: Checkout
-      - name: Install dependencies
-        run: pip install -r ./internal/ci/calculate-changed-services/requirements.txt
-      - env:
-          REDIS_HOST: ${{ secrets.REDIS_HOST }}
-          REDIS_PORT: ${{ secrets.REDIS_PORT }}
-          REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
-          REDIS_SSL: ${{ secrets.REDIS_SSL }}
-        name: Finalize changed services
-        run: ./internal/ci/calculate-changed-services/main.py --action set
-
   reddit-scheduled-submit:
     if: github.event_name == 'schedule' && github.event.schedule == '0 17 * * *'
     runs-on: ubuntu-latest
@@ -348,3 +281,96 @@ jobs:
       - if: fromJson(steps.db.outputs.found)
         name: Mark story as submitted
         run: poetry run ./main.py --submit --id "${{ steps.db.outputs.id }}"
+
+  prepare:
+    if: |
+      ( github.event_name == 'push' && github.ref == 'refs/heads/main' ) ||
+      github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    outputs:
+      matrix: ${{ steps.matrix.outputs.matrix }}
+      length: ${{ steps.matrix.outputs.length }}
+    steps:
+      - uses: actions/checkout@v4
+        name: Checkout
+      - id: matrix
+        name: Discover changed services
+        uses: developer-friendly/selective-builds-actions@v1
+        with:
+          path: applications
+          redis-host: ${{ secrets.REDIS_HOST }}
+          redis-port: ${{ secrets.REDIS_PORT }}
+          redis-password: ${{ secrets.REDIS_PASSWORD }}
+          redis-ssl: true
+          exclusions: |
+            .git
+            .github
+
+  build:
+    needs: prepare
+    runs-on: ubuntu-latest
+    if: needs.prepare.outputs.length > 0
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.prepare.outputs.matrix) }}
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+      - name: Pre-process image name
+        id: image-name
+        run: |
+          name=$(echo ${{ matrix.directory }} | sed 's/.*\///')
+          echo "name=$name" >> $GITHUB_OUTPUT
+      - id: meta
+        name: Docker metadata
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}/${{ steps.image-name.outputs.name }}
+      - id: build-push
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: ${{ matrix.directory }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+
+  finalize:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+        name: Checkout
+      - id: matrix
+        name: Discover changed services
+        uses: developer-friendly/selective-builds-actions@v1
+        with:
+          path: applications
+          redis-host: ${{ secrets.REDIS_HOST }}
+          redis-port: ${{ secrets.REDIS_PORT }}
+          redis-password: ${{ secrets.REDIS_PASSWORD }}
+          redis-ssl: ${{ secrets.REDIS_SSL }}
+          mode: submit
+          exclusions: |
+            .git
+            .github
