--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,8 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-      - id: check-added-large-files
-        args: ["--maxkb=800"]
+      # - id: check-added-large-files
+      #   args: ["--maxkb=800"]
       - id: check-ast
       - id: check-executables-have-shebangs
       - id: check-json
