--- a/kubernetes/newsletter-server/gateway/gateway.yml
+++ b/kubernetes/newsletter-server/gateway/gateway.yml
@@ -2,6 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: global
+  namespace: default
 spec:
   gatewayClassName: cilium
   listeners:
