--- a/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
@@ -10,6 +10,8 @@ spec:
         kind: HelmRepository
         name: cert-manager
       version: 1.15.x
+  install:
+    createNamespace: true
   interval: 1h0m0s
   releaseName: cert-manager
   targetNamespace: cert-manager
