--- a/kubernetes/newsletter-server/helm-releases/external-secrets/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/external-secrets/helmrelease.yml
@@ -10,6 +10,8 @@ spec:
         kind: HelmRepository
         name: external-secrets
       version: 0.10.x
+  install:
+    createNamespace: true
   interval: 1h0m0s
   releaseName: external-secrets
   targetNamespace: external-secrets
