--- a/kubernetes/newsletter-server/helm-releases/promtail/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/promtail/helmrelease.yml
@@ -10,6 +10,8 @@ spec:
         kind: HelmRepository
         name: grafana
       version: 6.16.x
+  install:
+    createNamespace: true
   interval: 1h0m0s
   releaseName: promtail
   targetNamespace: monitoring
