--- a/kubernetes/newsletter-server/helm-releases/trivy-operator/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/trivy-operator/helmrelease.yml
@@ -10,6 +10,8 @@ spec:
         kind: HelmRepository
         name: aquasecurity
       version: 0.24.x
+  install:
+    createNamespace: true
   interval: 1h0m0s
   releaseName: trivy-operator
   targetNamespace: trivy-operator
