--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
@@ -10,6 +10,8 @@ spec:
         kind: HelmRepository
         name: victoria-metrics
       version: 0.25.x
+  install:
+    createNamespace: true
   interval: 1h0m0s
   releaseName: victoria-metrics-k8s-stack
   targetNamespace: monitoring
