--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/grafana.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/grafana.yml
@@ -1,10 +1,11 @@
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: grafana
+  name: grafana-operator
   namespace: flux-system
 spec:
-  interval: 1h0m0s
+  interval: 1m0s
   provider: generic
-  type: oci
+  ref:
+    semver: v5.12.0
   url: oci://ghcr.io/grafana/helm-charts/grafana-operator
