fix: modify yaml typo

--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
@@ -21,7 +21,7 @@ spec:
   releaseName: victoria-metrics-k8s-stack
   targetNamespace: monitoring
   test:
-    enabled: false
+    enable: false
   upgrade:
     cleanupOnFail: true
     crds: CreateReplace
