chore: prepare NS for atlantis deployment

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -119,6 +119,9 @@ frontend https
   acl vmagent hdr(host) -i vmagent.developer-friendly.blog
   use_backend k8s if vmsingle || vmagent
 
+  acl atlantis hdr(host) -i atlantis.developer-friendly.blog
+  use_backend k8s if atlantis
+
   default_backend not_found
 
 listen apiserver
