--- a/kubernetes/newsletter-server/flux-system/gotk-sync.yaml
+++ b/kubernetes/newsletter-server/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/meysam81/infra
+  url: https://github.com/meysam81/infra.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
