fix(atlantis): modify typo in ES

--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -562,10 +562,10 @@ extraManifests:
     spec:
       data:
         - remoteRef:
-            key: /atlants/webhook-secret
+            key: /atlantis/webhook-secret
           secretKey: github_secret
         - remoteRef:
-            key: /atlants/user-pat
+            key: /atlantis/user-pat
           secretKey: github_token
       refreshInterval: 24h
       secretStoreRef:
