chore(atlantis): use cluster ip service

--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -285,7 +285,7 @@ readinessProbe:
   scheme: HTTP
 
 service:
-  type: NodePort
+  type: ClusterIP
   annotations: {}
   port: 80
   portName: atlantis
