--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -193,15 +193,18 @@ config: ""
 repoConfig: |
   ---
   repos:
-  - id: /.*/
-    apply_requirements: []
-    workflow: default
+  - allow_custom_workflows: false
     allowed_overrides: []
-    allow_custom_workflows: false
-  - id: meysam81/infra
+    apply_requirements: [approved]
+    id: /.*/
+    import_requirements: [approved]
+    plan_requirements: [approved]
     workflow: default
+  - apply_requirements: [approved, mergeable]
+    id: github.com/meysam81/infra
     pre_workflow_hooks:
       - run: terragrunt-atlantis-config generate --output atlantis.yaml --autoplan --parallel --create-workspace
+    workflow: default
   workflows:
     default:
       plan:
