--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -212,25 +212,46 @@ repoConfig: |
       plan_requirements:
         - mergeable
         - undiverged
-      workflow: default
-    - id: github.com/meysam81/infra
-      pre_workflow_hooks:
-        - run: |
-            echo "generating atlantis.yaml"
-            terragrunt-atlantis-config generate --output atlantis.yaml --autoplan --parallel
-          description: Generating atlantis.yaml
-          shell: bash
-          shellArgs: -cv
-      workflow: default
+      workflow: terragrunt
   workflows:
-    default:
+    terragrunt:
       apply:
         steps:
-          - apply
+          - env:
+              command: echo "tofu${ATLANTIS_TERRAFORM_VERSION}"
+              name: TERRAGRUNT_TFPATH
+          - env:
+              name: TF_IN_AUTOMATION
+              value: "true"
+          - run: terragrunt apply -input=false $PLANFILE
+      import:
+        steps:
+          - env:
+              command: echo "tofu${DEFAULT_TERRAFORM_VERSION}"
+              name: TERRAGRUNT_TFPATH
+          - env:
+              command: git show -s --format="%ae" $HEAD_COMMIT
+              name: TF_VAR_author
+          - run: terragrunt import -input=false $(printf '%s' $COMMENT_ARGS | sed 's/,/ /' | tr -d '\\')
       plan:
         steps:
-          - init
-          - plan
+          - env:
+              command: echo "tofu${ATLANTIS_TERRAFORM_VERSION}"
+              name: TERRAGRUNT_TFPATH
+          - env:
+              name: TF_IN_AUTOMATION
+              value: "true"
+          - run:
+              command: terragrunt plan -input=false $(printf '%s' $COMMENT_ARGS | sed 's/,/ /g' | tr -d '\\') -no-color -out $PLANFILE
+              output: hide
+          - run: |
+              terragrunt show $PLANFILE
+      state_rm:
+        steps:
+          - env:
+              command: echo "tofu${DEFAULT_TERRAFORM_VERSION}"
+              name: TERRAGRUNT_TFPATH
+          - run: terragrunt state rm $(printf '%s' $COMMENT_ARGS | sed 's/,/ /' | tr -d '\\')
 
 # -- Enables atlantis to run on a fork Pull Requests.
 allowForkPRs: false
