--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -560,17 +560,15 @@ environmentRaw: []
 # For example, providing ATLANTIS_GH_USER here and defining a value for github.user will result in the github.user value being used.
 # Check values.yaml for examples.
 loadEnvFromSecrets:
-  - atlantis-envs
+  - atlantis-envs-secret
 
 # -- Optionally specify additional Kubernetes ConfigMaps to load environment variables from.
 # All key-value pairs within these ConfigMaps will be set as environment variables.
 # Note that any variables set here will be ignored if also defined in the env block of the atlantis statefulset.
 # For example, providing ATLANTIS_ALLOW_FORK_PRS here and defining a value for allowForkPRs will result in the allowForkPRs value being used.
 # Check values.yaml for examples.
-loadEnvFromConfigMaps: []
-# loadEnvFromConfigMaps:
-#   - config_one
-#   - config_two
+loadEnvFromConfigMaps:
+  - atlantis-envs-config
 
 # -- Optionally specify google service account credentials as Kubernetes secrets. If you are using the terraform google provider you can specify the credentials as "${file("/var/secrets/some-secret-name/key.json")}".
 # Check values.yaml for examples.
@@ -619,7 +617,7 @@ extraManifests:
   - apiVersion: external-secrets.io/v1beta1
     kind: ExternalSecret
     metadata:
-      name: atlantis-envs
+      name: atlantis-envs-secret
     spec:
       data:
         - remoteRef:
@@ -634,6 +632,9 @@ extraManifests:
         - remoteRef:
             key: /atlantis/cloudflare-token
           secretKey: TF_VAR_cloudflare_api_token
+        - remoteRef:
+            key: /external-secrets/role-arn
+          secretKey: AWS_ROLE_ARN
       refreshInterval: 24h
       secretStoreRef:
         kind: ClusterSecretStore
@@ -670,6 +671,14 @@ extraManifests:
             - path:
                 type: PathPrefix
                 value: /
+  - apiVersion: v1
+    kind: ConfigMap
+    metadata:
+      name: atlantis-envs-config
+    data:
+      AWS_WEB_IDENTITY_TOKEN_FILE: /var/run/secrets/kubernetes.io/serviceaccount/token
+      AWS_ROLE_SESSION_NAME: atlantis
+      AWS_REGION: ap-southeast-1
 
 # -- Optionally specify init containers manifests to be added to the Atlantis pod.
 # Check values.yaml for examples.
