chore(atlantis): remove plan requirements

--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -209,9 +209,7 @@ repoConfig: |
       import_requirements:
         - mergeable
         - approved
-      plan_requirements:
-        - mergeable
-        - undiverged
+      plan_requirements: []
       workflow: terragrunt
   workflows:
     terragrunt:
