--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -644,34 +644,34 @@ extraManifests:
         creationPolicy: Owner
         deletionPolicy: Delete
         immutable: false
-  - apiVersion: gateway.networking.k8s.io/v1
-    kind: HTTPRoute
-    metadata:
-      name: atlantis
-    spec:
-      hostnames:
-        - atlantis.developer-friendly.blog
-      parentRefs:
-        - group: gateway.networking.k8s.io
-          kind: Gateway
-          name: global
-          namespace: default
-          sectionName: http
-      rules:
-        - backendRefs:
-            - kind: Service
-              name: atlantis
-              port: 80
-          filters:
-            - responseHeaderModifier:
-                set:
-                  - name: Strict-Transport-Security
-                    value: max-age=31536000; includeSubDomains; preload
-              type: ResponseHeaderModifier
-          matches:
-            - path:
-                type: PathPrefix
-                value: /
+  # - apiVersion: gateway.networking.k8s.io/v1
+  #   kind: HTTPRoute
+  #   metadata:
+  #     name: atlantis
+  #   spec:
+  #     hostnames:
+  #       - atlantis.developer-friendly.blog
+  #     parentRefs:
+  #       - group: gateway.networking.k8s.io
+  #         kind: Gateway
+  #         name: global
+  #         namespace: default
+  #         sectionName: http
+  #     rules:
+  #       - backendRefs:
+  #           - kind: Service
+  #             name: atlantis
+  #             port: 80
+  #         filters:
+  #           - responseHeaderModifier:
+  #               set:
+  #                 - name: Strict-Transport-Security
+  #                   value: max-age=31536000; includeSubDomains; preload
+  #             type: ResponseHeaderModifier
+  #         matches:
+  #           - path:
+  #               type: PathPrefix
+  #               value: /
   - apiVersion: v1
     kind: ConfigMap
     metadata:
