fix: disable VM force upgrade

--- a/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/atlantis/helm-values.yml
@@ -362,7 +362,7 @@ statefulSet:
 terminationGracePeriodSeconds:
 
 ingress:
-  enabled: true
+  enabled: false
   ingressClassName:
   apiVersion: ""
   labels: {}
