--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
@@ -12,7 +12,7 @@ spec:
       version: 0.x
   interval: 1h0m0s
   releaseName: victoria-metrics-k8s-stack
-  targetNamespace: monitoring
+  targetNamespace: observability
   valuesFrom:
     - kind: ConfigMap
       name: victoria-metrics-k8s-stack
