--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
@@ -14,7 +14,7 @@ spec:
     mode: enabled
   interval: 1h0m0s
   releaseName: victoria-metrics-k8s-stack
-  targetNamespace: observability
+  targetNamespace: monitoring
   valuesFrom:
     - kind: ConfigMap
       name: victoria-metrics-k8s-stack
