chore: disable vmsingle for a bit

--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helm-values.yml
@@ -216,7 +216,7 @@ vmalert:
     extraArgs:
       external.url: https://alertmanager.developer-friendly.blog
 vmsingle:
-  enabled: true
+  enabled: false
   spec:
     retentionPeriod: 3d
     storage: null
