--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helmrelease.yml
@@ -10,8 +10,8 @@ spec:
         kind: HelmRepository
         name: victoria-metrics
       version: 0.x
-  driftDetection:
-    mode: enabled
+  # driftDetection:
+  #   mode: enabled
   interval: 1h0m0s
   releaseName: victoria-metrics-k8s-stack
   targetNamespace: monitoring
