fix(CI): change directory before build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,6 +261,7 @@ jobs:
       - name: Build docker
         uses: meysam81/build-docker@v1
         with:
+          context: ${{ matrix.directory }}
           image-name: ghcr.io/${{ github.repository }}/${{ steps.image-name.outputs.name }}
           kubescape: true
           kubescape-upload-sarif: true
